--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>AngularJsVraptorContatos</groupId>
-	<artifactId>AngularJsVraptorContatos</artifactId>
+	<artifactId>Contatos</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>AngularJsVraptorContatos</name>
 
 	<properties>
