--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
 			<artifactId>xstream</artifactId>
 			<version>1.4.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jettison</groupId>
+			<artifactId>jettison</artifactId>
+			<version>1.3.3</version>
+		</dependency>
 
 		<!-- Test dependencies -->
 		<dependency>
