Adding i18n with support to change at runtime

--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,8 +1,9 @@
-hibernate.connection.driver_class=com.mysql.jdbc.Driver
-hibernate.connection.url=jdbc:mysql://localhost/contatos
-hibernate.connection.username=root
-hibernate.connection.password=root
-hibernate.hbm2ddl.auto=update
+hibernate.connection.driver_class=org.hsqldb.jdbcDriver
+hibernate.connection.url=jdbc:hsqldb:mem:/contatos
+hibernate.connection.username=sa
+hibernate.connection.password=
+hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.import_files=sql/init.sql
 hibernate.query.substitutions=true=1, false=0
 hibernate.show_sql=true
 hibernate.format_sql=true
