--- a/.classpath
+++ b/.classpath
@@ -166,5 +166,5 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="output" path="src/target"/>
+	<classpathentry kind="output" path="target"/>
 </classpath>
