--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
 			<version>1.2</version>
 		</dependency>
 		<dependency>
+	        <groupId>mysql</groupId>
+	        <artifactId>mysql-connector-java</artifactId>
+	        <version>5.1.6</version>
+	    </dependency>
+		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
 			<version>2.2.8</version>
